fix: complete dark mode

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,5 +5,5 @@ footer {
     margin-top: 5rem;
     border-top: 1px solid var(--border);
     background-color: var(--black);
-    color: var(--white);
+    color: var(--dark-grey);
 }
