--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 
 body {
     font-size: 14px;
-    background-color: var(--white);
+    background-color: var(--black);
     padding-top: 65px;
 }
 
